# trabalho1-forca-Bianca-Mirtes

./: CMakeLists.txt  README.md  author.md
data/: base_scores.txt  teste1_p.txt  teste2_p.txt  teste3_p.txt  teste4_p.txt  teste5_s.txt  teste6_s.txt  teste7_s.txt  teste8_s.txt  teste9_s.txt  teste_EX_p.txt
include/: Forca.hpp  base_scores.txt  teste.cpp  teste.txt
src/: Forca.hpp  forca.cpp  main.cpp  program  teste.cpp
